--- a/components/FooterNav/FooterNav.module.css
+++ b/components/FooterNav/FooterNav.module.css
@@ -1,7 +1,7 @@
 .list {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   gap: 16px;
   margin: 0;
   padding: 0;
